# Calculadora-GUI

./: LICENSE  README.md  pyproject.toml
src/: calc.py
