[project]
name = "gui-calculadora"
version = "0.1.0"
description = "una calculadora hecha con flet"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "alejandrovaca585@gmail.com" }
]
dependencies = [
  "flet>=0.80.1"
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.1",
]

[tool.flet]
org = "com.mycompany"
product = "gui-calculadora"
company = "Flet"
copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src"